--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
+    "dev": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,5 +43,5 @@
   "devDependencies": {
     "tailwindcss": "^3.4.6"
   },
-  "proxy": "http://127.0.0.1:5000"
+  "proxy": "https://hook-em-hardware-be-b81aa6e7bd7f.herokuapp.com/"
 }
